full screen bug on mobile device is fixed

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ nav ul li a:hover{
 }
 #home{
   background-color: rgba(0, 0, 0, 0.695);
-  /* height: 100vh; */
+  height: 100dvh;
   overflow: hidden;
 }
 .hero{
